--- a/css/trophy.css
+++ b/css/trophy.css
@@ -19,6 +19,8 @@
     --back-likes-color: #FED1E8;
     --comments-color: #FFBA49;
     --back-comments-color: #FFF1DB;
+    --reposts-color: #533A7B;
+    --back-reposts-color: #DDD8E5;
     --shadow-big: 0 0 15px #02020207;
     --shadow-small: 0 0 12px #02020205;
     --shadow-popup: 0 0 9px #02020211;
@@ -229,6 +231,11 @@
 .current-static.comment {
     background-color: var(--back-comments-color);
     color: var(--comments-color);
+}
+
+.current-static.repost {
+    background-color: var(--back-reposts-color);
+    color: var(--reposts-color);
 }
 
 .br-mobile {
