--- a/css/profile.css
+++ b/css/profile.css
@@ -994,7 +994,7 @@ span.for-friends {
     width: 100%;
     justify-content: space-between;
     margin-top: 1.6rem;
-    margin-bottom: 1.6rem;
+    margin-bottom: 2.6rem;
     gap: 1.6rem;
 }
 
@@ -1379,6 +1379,16 @@ span.for-friends {
     gap: 1rem;
 }
 
+#success-blossom-notifications-widget-mobile {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: none;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 2.6rem;
+}
+
 .blossom-notify {
     padding: 1rem 1.6rem;
     border-radius: 1rem;
@@ -1453,6 +1463,11 @@ span.for-friends {
 
     .user-post .post-date {
         opacity: 1;
+    }
+
+    #success-blossom-notifications-widget-mobile {
+        display: flex;
+        /* flex-direction: row; */
     }
 }
 
