--- a/css/wall.css
+++ b/css/wall.css
@@ -184,7 +184,7 @@
     line-height: 1.5;
 }
 
-.user-post p.comment-text {
+.user-post p.comment-text, .user-post p.comment-text a {
     font-size: var(--font-size-2);
 }
 
