--- a/css/trophy.css
+++ b/css/trophy.css
@@ -102,6 +102,11 @@
     font-size: var(--font-size-2);
 }
 
+.user-trophy-info.personal .no-owners {
+    color: var(--else-text-color-50);
+    font-size: var(--font-size-2);
+}
+
 .trophy-info {
     display: flex;
     gap: 1.6rem;
